# raytracing-discovery

./: .gitignore  README.md
project/: CMakeLists.txt
project/cmake/: FetchImguiTarget.cmake  defines.h.in
project/resources/: CornellBoxCubeLighten.fbx  CornellBoxSphere.blend  CornellBoxSphere.fbx  CornellBoxSphereLighten.fbx
project/src/app/: CMakeLists.txt  main.cpp
project/src/benchmark/: CMakeLists.txt  main.cpp
project/src/engine/: CMakeLists.txt
project/src/engine/engine/: RenderBuffer.cpp  RenderBuffer.hpp  Renderer.cpp  Renderer.hpp  rayCaster.cpp  rayCaster.hpp
project/src/engine/engine/data/: Camera.cpp  Camera.hpp  DataIO.cpp  DataIO.hpp  Light.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  Scene.hpp
project/src/engine/engine/geometry/: CommonTypes.hpp  Constants.hpp  Ray.hpp  intersection.cpp  intersection.hpp  sampling.cpp  sampling.hpp
project/src/engine/engine/synchronisation/: Command.hpp  CommandManager.cpp  CommandManager.hpp  RenderCommand.hpp
project/src/engine/engine/tonemapping/: reinhard.cpp  reinhard.hpp
